--- a/client/src/Styling/Pokemart.css
+++ b/client/src/Styling/Pokemart.css
@@ -1,40 +1,63 @@
-* {
+*{
     margin:0;
     padding: 0;
-   
 }
+
+
 section {
-width: 80%;
+width: 90%;
 margin: auto;
 margin-top: 5%;
-display: grid;
-grid-template-columns: repeat (3, 1fr);
-grid-template-columns: auto;
+margin-bottom: 5%;
+ display: grid;
+grid-template-columns: repeat(5, 1fr);
+grid-template-rows: repeat(5, 1fr);
+grid-column-gap: 0px;
+grid-row-gap: 0px;
 }
 
 
 .cards {
 width: 250px;
-padding: 20px;
+padding: 2px;
 }
 
-.cards:hover {
+/* .cards:hover {
     box-shadow: 0 10px 10px 10px rbga(0, 0, 0, 0.1);
     cursor: pointer;
-}
+}  */
 
-.image_box img {
-    width: 150px;
-    height: 200px;
-    }
-    .image_box img {
-    width: 150px;
-    height: 200px;
-    }
     .details p:nth-child(1) {
     font-weight: bold;
     }
     .details p:nth-child(2){
     color: grey;
     font-size: 0.8rem;
+    }
+    
+   
+    details button {
+        padding:5px 10px;
+        border:none;
+        font-weight: bold;
+        background-color: skyblue;
+        outline: none;
+    } 
+
+    button {
+        font-size: 10px;
+        padding: 5px 20px;
+        border-radius: 14px;
+        transition-duration: 0.4s;
+        cursor: pointer;
+    }
+
+    button:hover {
+    background-color: #af4c4c; 
+    color: white;
+    }
+
+    .price {
+        margin-left: 14%;
+        font-weight: bold;
     }
